Multiple files can be uploaded and viewed in file upload exercisesmostly correctly.